--- a/mkosi.conf
+++ b/mkosi.conf
@@ -11,14 +11,14 @@ Format=directory
 
 [Content]
 Autologin=yes
-Ssh=yes
+#Ssh=yes
 WithDocs=yes
 WithNetwork=yes
 BuildSources=.
 SELinuxRelabel=no
 
-KernelModulesInitrdExclude=.*
-KernelModulesInitrdInclude=default
+#KernelModulesInitrdExclude=.*
+#KernelModulesInitrdInclude=default
 
 Packages=
         attr
